--- a/Tailspin.SpaceGame.Web.UITests/Tailspin.SpaceGame.Web.UITests.csproj
+++ b/Tailspin.SpaceGame.Web.UITests/Tailspin.SpaceGame.Web.UITests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -11,11 +11,11 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="76.0.3809.12600" />
-    <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.24.0" />
-    <PackageReference Include="Selenium.WebDriver.IEDriver" Version="3.8.0.0" />
-    <PackageReference Include="WebDriverManager" Version="2.6.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha03" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="78.0.3904.10500" />
+    <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.26.0" />
+    <PackageReference Include="Selenium.WebDriver.IEDriver" Version="3.150.1" />
+    <PackageReference Include="WebDriverManager" Version="2.7.0" />
   </ItemGroup>
 
 </Project>
